@startuml
enum RunEndReason {
    Defeat,
    Victory,
}
class RunState <<partial>> {
    + {static} Instance : RunState <<get>>
    + RunEndReason : RunEndReason <<get>>
    + ProjectDir : string <<get>> = ""
    + SimBinaryPath : string <<get>> = ""
    + DockBinaryPath : string <<get>> = ""
    + AdmiralBinaryPath : string <<get>> = ""
    + PlayerFleetPath : string <<get>> = ""
    + FallbackFleetPath : string <<get>> = ""
    + Settings : UserSettings <<get>>
    + PlayerId : string <<get>> <<set>>
    + RunSeed : ulong <<get>> <<set>>
    + Salvage : int <<get>> <<set>> = 50
    + Tech : int <<get>> <<set>> = 0
    + HangarCapacity : int <<get>> <<set>> = 10
    + JumpNumber : int <<get>> <<set>> = 1
    + LossCount : int <<get>> <<set>> = 0
    + AdmiralId : string <<get>> <<set>> = ""
    + AdmiralName : string <<get>> <<set>> = ""
    + AdmiralBonusText : string <<get>> <<set>> = ""
    + Fleet : FleetJsonData <<get>> <<set>>
    + TierRerolls : int[] <<get>> <<set>>
    + ResearchRerolls : int[] <<get>> <<set>>
    + UpgradePurchases : Dictionary<string, int> <<get>> <<set>>
    + UsedTonnage : int <<get>>
    + FreeTonnage : int <<get>>
    + IsRunOver : bool <<get>>
    + HasActiveRun : bool <<get>> <<set>>
    + IsBattleActive : bool <<get>>
    + IsRunComplete : bool <<get>> <<set>>
    - _currentBattleInputs : BattleInputs?
    + CurrentOpponentFleet : FleetJsonData? <<get>>
    + AdmiralSelection : IAdmiralSelection <<get>>
    - _encounterSource : IEncounterSource
    + Stats : IStatsStore <<get>>
    - _store : IRunStore
    + <<override>> _Ready() : void
    - <<async>> LoadAsync() : Task
    + Save() : Task
    + SaveSettings() : void
    - SettingsPath() : string
    + <<async>> StartRun(admiral:Admiral, runSeed:ulong?) : Task
    + <<async>> AbandonCurrentRun() : Task
    + <<async>> SaveAndQuitToMenu() : Task
    + OpenDockyardSession() : IDockyard
    + BuildDockSessionInput() : DockSessionInput
    + ApplyDockSessionDelta(delta:DockDelta, offers:DockOffersResult) : void
    + GetBattleSeed() : Task<ulong>
    + <<async>> FetchEncounterJsonAsync() : Task<string>
    + BeginBattle(inputs:BattleInputs) : void
    + <<async>> RecordBattleResult(result:BattleResult) : Task
    - ToSnapshot() : RunSnapshot
    - ApplySnapshot(snapshot:RunSnapshot) : void
    - {static} DefaultFleet() : FleetJsonData
    - {static} DefaultCorvette() : ShipDefData
}
Node <|-- RunState
IRunData <|-- RunState
@enduml
